test/functions/resolution/errors/testBadCallCandidates.compopts
-stestNum=1 # testBadCallCandidates.1.good
-stestNum=2 # testBadCallCandidates.2.good
-stestNum=3 # testBadCallCandidates.3.good
-stestNum=4 # testBadCallCandidates.4.good
-stestNum=5 # testBadCallCandidates.5.good
-stestNum=6 # testBadCallCandidates.6.good
-stestNum=7 # testBadCallCandidates.7.good
-stestNum=8 # testBadCallCandidates.8.good
-stestNum=9 # testBadCallCandidates.9.good
-stestNum=10 # testBadCallCandidates.10.good
-stestNum=11 # testBadCallCandidates.11.good
